--- a/snippets/head.liquid
+++ b/snippets/head.liquid
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="{{ settings.color_primary }}">
 <link rel="canonical" href="{{ canonical_url }}">
 {{ 'bootstrap.scss.css' | asset_url | stylesheet_tag }}
