--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -10371,7 +10371,7 @@ window.CartJs = CartJs;
 /* 2 */
 /***/ (function(module, exports) {
 
-// removed by extract-text-webpack-plugin
+throw new Error("Module build failed: ModuleBuildError: Module build failed: Error: ENOENT: no such file or directory, open '/Users/dan/Lucid/shopify-base/src/scss/bootstrap/bootstrap.scss'\n    at runLoaders (/Users/dan/Lucid/shopify-base/node_modules/webpack/lib/NormalModule.js:195:19)\n    at /Users/dan/Lucid/shopify-base/node_modules/loader-runner/lib/LoaderRunner.js:364:11\n    at /Users/dan/Lucid/shopify-base/node_modules/loader-runner/lib/LoaderRunner.js:200:19\n    at /Users/dan/Lucid/shopify-base/node_modules/enhanced-resolve/lib/CachedInputFileSystem.js:70:14\n    at _combinedTickCallback (internal/process/next_tick.js:131:7)\n    at process._tickCallback (internal/process/next_tick.js:180:9)");
 
 /***/ }),
 /* 3 */
