--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -1,16 +1,7 @@
+// GLOBAL SETTINGS
 * {
   outline: 0;
   &:active, &:focus, &:hover {
     outline: 0;
-  }
-}
-
-body {
-  background-color: $white;
-}
-
-.form-inline {
-  input, button {
-    border: none;
   }
 }
