'master section' init, 'text column' init

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -51,7 +51,7 @@
 
 {% comment %} PRIMARY NAVIGATION BAR {% endcomment %}
 <header class="row">
-  <nav class="col navbar navbar-toggleable-md">
+  <nav class="col navbar navbar-expand-md">
     <div class="navbar-brand">
       {%- if section.settings.logo != blank -%}
         <a href="{{ shop.url }}"><img src="{{ section.settings.logo | img_url: 'master' }}" alt="{{ shop.name }}"></a>
