--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -61,6 +61,14 @@
   </div>
 </footer>
 
+{% if template.directory == 'customers' %}
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'shopify_common.js' | shopify_asset_url }}"></script><![endif]-->
+{% endif %}
+
+<!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'app.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
+<!--[if lt IE 9]><script src="{{ 'app.js' | asset_url }}"></script><![endif]-->
+
 {% for block in section.blocks %}
   {% if block.type == 'script' %}
     {{ block.settings.footer_script }}
