--- a/snippets/header-search-account-cart.liquid
+++ b/snippets/header-search-account-cart.liquid
@@ -1,6 +1,10 @@
 <form action="/search" method="get" role="search" class="col-auto ml-auto form-inline">
-  <input type="search" name="q" value="{{ search.terms | escape }}" placeholder="Search" class="form-control">
-  <button type="submit" class="btn btn-secondary">Submit</button>
+  <div class="input-group">
+    <input type="search" name="q" value="{{ search.terms | escape }}" placeholder="Search" class="form-control">
+    <div class="input-group-append">
+      <button type="submit" class="btn btn-secondary">Submit</button>
+    </div>
+  </div>
 </form>
 
 <ul class="nav col-auto">
